fixed spacing on the header where my name is to center the text

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -31,5 +31,5 @@ h3{
 
 .portfolioItem {
     width: 100%;
-    /* min-height: 200px; */
+    min-height: 200px;
 }
